Moving all my changes over from github.io for submission

--- a/views/pizza.html
+++ b/views/pizza.html
@@ -102,7 +102,7 @@
           </div>
         </div>
         <div id="randomPizzas" class="row">
-          <div id="pizza0" class="randomPizzaContainer" style="width:33.33%;">
+          <div id="pizza0" class="randomPizzaContainer">
             <div class="col-md-6">
               <img src="images/pizza.png" class="img-responsive">
             </div>
@@ -119,12 +119,12 @@
               </ul>
             </div>
           </div>
-          <div id="pizza1" class="randomPizzaContainer" style="width:33.33%;">
+          <div id="pizza1" class="randomPizzaContainer">
             <div class="col-md-6">
               <img src="images/pizza.png" class="img-responsive">
             </div>
             <div class="col-md-6">
-              <h4>The Cameron Special</h4>
+              <h4>The Jerry Special</h4>
               <ul>
                 <li>Chicken</li>
                 <li>Hot Sauce</li>
